cleanup system icons

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -219,10 +219,10 @@
     height: 25px;
 }
 
-.pk-icon-large-system { background-image: url("../../assets/images/icon-large-system.svg"); }
-.pk-icon-large-localization { background-image: url("../../assets/images/icon-large-localization.svg"); }
+.pk-icon-large-settings { background-image: url("../../assets/images/icon-large-settings.svg"); }
+.pk-icon-large-pin { background-image: url("../../assets/images/icon-large-pin.svg"); }
 .pk-icon-large-mail { background-image: url("../../assets/images/icon-large-mail.svg"); }
-.pk-icon-large-cache { background-image: url("../../assets/images/icon-large-cache.svg"); }
+.pk-icon-large-bolt { background-image: url("../../assets/images/icon-large-bolt.svg"); }
 .pk-icon-large-server { background-image: url("../../assets/images/icon-large-server.svg"); }
 .pk-icon-large-code { background-image: url("../../assets/images/icon-large-code.svg"); }
 .pk-icon-large-database { background-image: url("../../assets/images/icon-large-database.svg"); }
@@ -325,8 +325,8 @@
 
 .pk-text-xlarge {
     font-family:  @base-heading-font-family;
-    font-size: 52px;
-    line-height: 56px;
+    font-size: 46px;
+    line-height: 52px;
 }
 
 
