fixed style for site pages view if empty state

--- a/app/system/modules/theme/less/uikit/nestable.less
+++ b/app/system/modules/theme/less/uikit/nestable.less
@@ -31,7 +31,7 @@
 
 .hook-nestable-placeholder() { background: #f5fbfe; }
 
-.hook-nestable-empty() { border: 1px dashed @global-border; }
+.hook-nestable-empty() {}
 
 .hook-nestable-handle() {}
 
