fixed padding for fake table if nestable

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -100,6 +100,7 @@
     color: @global-color;
 }
 
+
 /* Panel Sortable (Dashboard)
 ========================================================================== */
 
@@ -256,7 +257,6 @@
 }
 
 
-
 /* Modifier `pk-subnav-icon`
 ========================================================================== */
 
@@ -317,14 +317,14 @@
 ========================================================================== */
 
 .pk-text-large {
-    font-family:  @base-heading-font-family;
+    font-family: @base-heading-font-family;
     font-weight: 400;
     font-size: @base-h2-font-size;
     line-height: @base-h2-line-height;
 }
 
 .pk-text-xlarge {
-    font-family:  @base-heading-font-family;
+    font-family: @base-heading-font-family;
     font-size: 46px;
     line-height: 52px;
 }
@@ -338,6 +338,7 @@
     padding-top: 28px;
     padding-bottom: 28px;
 }
+
 
 /* Modifier `pk-table-collapse`
 ========================================================================== */
@@ -444,6 +445,8 @@
 .pk-table-fake-subheading { padding-top: 20px; }
 
 .pk-table-fake-border { box-shadow: inset 0 -1px 0  @global-border; }
+
+.pk-table-fake-nestable-padding { padding-left: 28px !important; }
 
 /*
  * Fix height
@@ -611,6 +614,7 @@
     50% { stroke: @global-primary-hover-background; }
     100% { stroke: @global-primary-hover-background; }
 }
+
 
 /* Editor
 ========================================================================== */
