--- a/app/system/modules/widget/app/templates/widget-settings.html
+++ b/app/system/modules/widget/app/templates/widget-settings.html
@@ -1,7 +1,33 @@
-<div class="uk-form-row">
-    <label for="form-title" class="uk-form-label">{{ 'Title' | trans }}</label>
-    <div class="uk-form-controls">
-        <input id="form-title" class="uk-form-width-large" type="text" name="title" v-model="widget.title" v-valid="required">
-        <p class="uk-form-help-block uk-text-danger" v-show="form.title.invalid">{{ 'Title cannot be blank.' | trans }}</p>
+<div class="uk-panel uk-form-stacked">
+
+    <div class="uk-form-row">
+        <label for="form-status" class="uk-form-label">{{ 'Status' | trans }}</label>
+        <div class="uk-form-controls">
+            <select id="form-status" class="uk-width-1-1" v-model="widget.status">
+                <option value="1">{{ 'Enabled' | trans }}</option>
+                <option value="0">{{ 'Disabled' | trans }}</option>
+            </select>
+        </div>
     </div>
+    <div class="uk-form-row">
+        <label for="form-position" class="uk-form-label">{{ 'Position' | trans }}</label>
+        <div class="uk-form-controls">
+            <select id="form-position" name="position" class="uk-width-1-1" v-model="widget.position" options="positionOptions"></select>
+        </div>
+    </div>
+    <div class="uk-form-row">
+        <span class="uk-form-label">{{ 'Restrict Access' | trans }}</span>
+        <div class="uk-form-controls uk-form-controls-text">
+            <p v-repeat="role: config.roles" class="uk-form-controls-condensed">
+                <label><input type="checkbox" value="{{ role.id }}" v-checkbox="widget.roles"> {{ role.name }}</label>
+            </p>
+        </div>
+    </div>
+    <div class="uk-form-row">
+        <span class="uk-form-label">{{ 'Options' | trans }}</span>
+        <div class="uk-form-controls">
+            <label><input type="checkbox" v-model="widget.data.show_title"> {{ 'Show Title' | trans }}</label>
+        </div>
+    </div>
+
 </div>
