updated site settings code markup

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -621,4 +621,5 @@
     padding: @form-padding;
     border: @form-border-width solid @form-border;
     background: @form-background;
+    border-radius: @global-border-radius;
 }
