--- a/app/system/modules/theme/less/uikit/modal.less
+++ b/app/system/modules/theme/less/uikit/modal.less
@@ -10,7 +10,7 @@
 @modal-z-index:                                 @global-z-index + 10;
 @modal-background:                              rgba(245,245,245,0.5);
 
-@modal-dialog-padding:                          24px;
+@modal-dialog-padding:                          40px;
 @modal-dialog-background:                       @global-background;
 
 @modal-dialog-large-width-large:                1200px;
@@ -58,7 +58,12 @@
 // Sub-object: `uk-modal-footer`
 // ========================================================================
 
-.hook-modal-footer() { margin-top: @modal-footer-margin-top; }
+.hook-modal-footer() {
+    margin: @modal-footer-margin-top -@modal-dialog-padding -@modal-dialog-padding -@modal-dialog-padding;
+    padding: 15px @modal-dialog-padding;
+    background: fade(@global-default-background, 30%);
+    border-top: 1px solid @global-border;
+}
 
 
 // Sub-object: `uk-modal-caption`
