--- a/app/system/modules/widget/app/templates/widget-settings.html
+++ b/app/system/modules/widget/app/templates/widget-settings.html
@@ -12,7 +12,7 @@
     <div class="uk-form-row">
         <label for="form-position" class="uk-form-label">{{ 'Position' | trans }}</label>
         <div class="uk-form-controls">
-            <select id="form-position" name="position" class="uk-width-1-1" v-model="widget.position" options="positionOptions"></select>
+            <select id="form-position" name="position" class="uk-width-1-1" v-model="widget.position" options="$parent.positionOptions"></select>
         </div>
     </div>
     <div class="uk-form-row">
