fixed modal footer for forms

--- a/app/system/modules/theme/less/uikit/modal.less
+++ b/app/system/modules/theme/less/uikit/modal.less
@@ -59,7 +59,7 @@
 // ========================================================================
 
 .hook-modal-footer() {
-    margin: @modal-footer-margin-top -@modal-dialog-padding -@modal-dialog-padding -@modal-dialog-padding;
+    margin: @modal-footer-margin-top -@modal-dialog-padding -@modal-dialog-padding -@modal-dialog-padding !important;
     padding: 15px @modal-dialog-padding;
     background: fade(@global-default-background, 30%);
     border-top: 1px solid @global-border;
