--- a/app/system/modules/site/app/templates/settings.html
+++ b/app/system/modules/site/app/templates/settings.html
@@ -1,8 +1,8 @@
 <div class="uk-form-row">
     <label for="form-title" class="uk-form-label">{{ 'Title' | trans }}</label>
     <div class="uk-form-controls">
-        <input id="form-title" class="uk-form-width-large" type="text" name="node[title]" v-model="node.title" v-valid="required">
-        <div class="uk-form-help-block uk-text-danger" v-show="form['node[title]'].invalid">{{ 'Invalid name.' | trans }}</div>
+        <input id="form-title" class="uk-form-width-large" type="text" name="title" v-model="node.title" v-valid="required">
+        <div class="uk-form-help-block uk-text-danger" v-show="form.title.invalid">{{ 'Invalid name.' | trans }}</div>
     </div>
 </div>
 
