--- a/themes/one/less/uikit/variables.less
+++ b/themes/one/less/uikit/variables.less
@@ -3,7 +3,7 @@
 //
 // ========================================================================
 
-@import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400,600';
+@import 'https://fonts.googleapis.com/css?family=Open+Sans:600,400,300';
 
 
 // Global variables
@@ -13,16 +13,16 @@
 // Text
 //
 
-@global-color:                                  #666668;
-@global-muted-color:                            #aaaaac;
+@global-color:                                  #444;
+@global-muted-color:                            #999;
 
-@global-link-color:                             #fe634a;
-@global-link-hover-color:                       #c93921;
+@global-link-color:                             #4091D2;
+@global-link-hover-color:                       #4587BE;
 
 @global-contrast-color:                         #fff;
 
-@global-font-size:                              14px;
-@global-line-height:                            20px;
+@global-font-size:                              16px;
+@global-line-height:                            22px;
 
 //
 // Backgrounds & Borders
@@ -31,34 +31,34 @@
 @global-background:                             #fff;
 @global-border:                                 #e5e5e5;
 
-@global-border-radius:                          2px;
+@global-border-radius:                          3px;
 
 @global-default-background:                     #f5f5f5;
 @global-default-hover-background:               #fafafa;
 @global-default-active-background:              #eee;
 
-@global-primary-background:                     #fe634a;
-@global-primary-hover-background:               lighten(@global-primary-background, 4%);
-@global-primary-active-background:              desaturate(darken(@button-primary-background, 4%), 16%);
+@global-primary-background:                     #50A2E5;
+@global-primary-hover-background:               #4091D2;
+@global-primary-active-background:              #3684BE;
 
-@global-success-background:                     #71bd6a;
-@global-success-hover-background:               lighten(@global-success-background, 6%);
-@global-success-active-background:              desaturate(darken(@button-success-background, 6%), 10%);
+@global-success-background:                     #80c96d;
+@global-success-hover-background:               #6dbc58;
+@global-success-active-background:              #61b54c;
 
-@global-danger-background:                      #e95555;
-@global-danger-hover-background:                lighten(@global-danger-background, 6%);
-@global-danger-active-background:               desaturate(darken(@button-danger-background, 6%), 10%);
+@global-danger-background:                      #f0615b;
+@global-danger-hover-background:                #e54f49;
+@global-danger-active-background:               #e4463a;
 
-@global-warning-background:                     #ff9a2e;
+@global-warning-background:                     #FFB24E;
 
 //
 // Spacings
 //
 
 @global-margin:                                 20px;
-@global-margin-large:                           25px;
-@global-grid-gutter:                            25px;
-@global-grid-gutter-large:                      35px;
+@global-margin-large:                           35px;
+@global-grid-gutter:                            30px;
+@global-grid-gutter-large:                      40px;
 
 //
 // Controls
