--- a/themes/one/less/uikit/alert.less
+++ b/themes/one/less/uikit/alert.less
@@ -10,16 +10,16 @@
 @alert-margin-vertical:                         @global-margin;
 
 @alert-background:                              #e1f2fb;
-@alert-color:                                   #67aad9;
+@alert-color:                                   #4091D2;
 
 @alert-success-background:                      #ecf7e9;
-@alert-success-color:                           #71bd6a;
+@alert-success-color:                           #80c96d;
 
 @alert-warning-background:                      #fff0e0;
 @alert-warning-color:                           #ff9a2e;
 
 @alert-danger-background:                       #fde7e7;
-@alert-danger-color:                            #e95555;
+@alert-danger-color:                            #F05D54;
 
 
 // Component
