--- a/themes/one/less/uikit/article.less
+++ b/themes/one/less/uikit/article.less
@@ -18,8 +18,9 @@
 @article-meta-color:                            @global-muted-color;
 
 @article-lead-color:                            @global-color;
-@article-lead-font-size:                        round((@global-font-size * 1.28)); // 18px / 20px
-@article-lead-line-height:                      round((@article-lead-font-size * 1.32)); // 24px / 26px
+@article-lead-font-size:                        round((@global-font-size * 1.4)); // 20px / 22px
+@article-lead-line-height:                      round((@article-lead-font-size * 1.28)); // 26px / 28px
+@article-lead-font-weight:                      300;
 
 @article-divider-margin:                        @global-margin-large;
 @article-divider-border:                        @global-border;
@@ -41,8 +42,14 @@
 // ========================================================================
 
 .hook-article-meta() {
-    text-transform: uppercase;
-    letter-spacing: 1px;
+
+    a { color: @article-meta-color; }
+
+    a:hover {
+        color: @global-link-hover-color;
+        text-decoration: none;
+    }
+
 }
 
 
