--- a/themes/one/less/uikit/form.less
+++ b/themes/one/less/uikit/form.less
@@ -35,18 +35,27 @@
 
 @form-danger-border:                            @global-danger-background;
 @form-danger-background:                        @global-background;
-@form-danger-color:                             #e95555;
+@form-danger-color:                             @global-color;
 
 @form-success-border:                           @global-success-background;
 @form-success-background:                       @global-background;
-@form-success-color:                            #71bd6a;
+@form-success-color:                            @global-color;
 
 @form-blank-border:                             @global-border;
+
+@form-stacked-font-weight:                      normal;
 
 @form-horizontal-label-margin-top:              7px;
 
 @form-icon-font-size:                           @global-font-size;
 @form-icon-color:                               @global-muted-color;
+
+//
+// New
+//
+
+@form-stacked-font-size:                        round((@global-font-size * 0.85)); // 12px / 14px
+@form-stacked-line-height:                      round((@form-stacked-font-size *  1.46)); // 18px / 20px
 
 
 // Component
@@ -61,10 +70,7 @@
 .hook-form-disabled() {}
 
 // Legend
-.hook-form-legend() {
-	font-weight: 300;
-	text-transform: uppercase;
-}
+.hook-form-legend() {}
 
 
 // Validation states
@@ -94,7 +100,11 @@
 // Sub-object: `uk-form-label`
 // ========================================================================
 
-.hook-form-stacked-label() {}
+.hook-form-stacked-label() {
+    font-size: @form-stacked-font-size;
+    line-height: @form-stacked-line-height;
+    text-transform: uppercase;
+}
 
 .hook-form-horizontal-label() {}
 
