--- a/themes/one/less/uikit/navbar.less
+++ b/themes/one/less/uikit/navbar.less
@@ -7,45 +7,42 @@
 // Variables
 // ========================================================================
 
-@navbar-background:                             @global-background;
-@navbar-color:                                  @global-color;
-@navbar-link-color:                             @global-link-color;
-@navbar-link-hover-color:                       @global-link-hover-color;
+@navbar-background:                             #fafafa;
+@navbar-color:                                  @global-muted-color;
+@navbar-link-color:                             @global-muted-color;
+@navbar-link-hover-color:                       @global-color;
 
-@navbar-nav-height:                             50px;
+@navbar-nav-height:                             80px;
 @navbar-nav-line-height:                        @navbar-nav-height;
-@navbar-nav-color:                              @global-color;
+@navbar-nav-color:                              @global-muted-color;
 @navbar-nav-font-size:                          @global-font-size;
 @navbar-nav-font-family:                        "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-@navbar-nav-hover-background:                   @global-background;
-@navbar-nav-hover-color:                        @global-link-color;
-@navbar-nav-onclick-background:                 @global-background;
-@navbar-nav-onclick-color:                      @global-link-color;
-@navbar-nav-active-background:                  @global-background;
-@navbar-nav-active-color:                       #333335;
+@navbar-nav-hover-background:                   transparent;
+@navbar-nav-hover-color:                        @global-color;
+@navbar-nav-onclick-background:                 transparent;
+@navbar-nav-onclick-color:                      @global-color;
+@navbar-nav-active-background:                  transparent;
+@navbar-nav-active-color:                       @global-color;
 
 @navbar-brand-font-size:                        round((@global-font-size * 1.28)); // 18px / 20px
-@navbar-brand-color:                            @global-color;
-@navbar-brand-hover-color:                      #333335;
+@navbar-brand-color:                            @global-muted-color;
+@navbar-brand-hover-color:                      @global-color;
 
 @navbar-toggle-font-size:                       round((@global-font-size * 1.28)); // 18px / 20px
 @navbar-toggle-color:                           @global-color;
-@navbar-toggle-hover-color:                     #333335;
+@navbar-toggle-hover-color:                     @global-color;
 
 
 // Component
 // ========================================================================
 
-.hook-navbar() {
-	border-top: 1px solid @global-border;
-    border-bottom: 1px solid @global-border;
-}
+.hook-navbar() {}
 
 
 // Sub-object: `uk-navbar-nav`
 // ========================================================================
 
-.hook-navbar-nav() { text-transform: uppercase; }
+.hook-navbar-nav() {}
 
 // Hover
 .hook-navbar-nav-hover() {}
