--- a/themes/one/less/uikit/pagination.less
+++ b/themes/one/less/uikit/pagination.less
@@ -48,7 +48,7 @@
 
 .hook-pagination-link-hover() { border-color: @pagination-hover-border; }
 
-.hook-pagination-link-active() { box-shadow: inset 0 1px 5px -1px rgba(0,0,0,0.1); }
+.hook-pagination-link-active() {}
 
 // Active
 .hook-pagination-active() { border-color: transparent; }
