--- a/themes/one/less/uikit/progress.less
+++ b/themes/one/less/uikit/progress.less
@@ -34,6 +34,16 @@
 .hook-progress-bar() {}
 
 
+// Color modifiers
+// ========================================================================
+
+.hook-progress-bar-success() {}
+
+.hook-progress-bar-warning() {}
+
+.hook-progress-bar-danger() {}
+
+
 // Miscellaneous
 // ========================================================================
 
