--- a/themes/one/less/uikit/subnav.less
+++ b/themes/one/less/uikit/subnav.less
@@ -7,6 +7,7 @@
 // Variables
 // ========================================================================
 
+@subnav-margin-horizontal:                      20px;
 @subnav-color:                                  @global-color;
 @subnav-hover-color:                            @global-link-color;
 @subnav-active-color:                           @global-link-color;
@@ -20,20 +21,11 @@
 
 @subnav-disabled-color:                         @global-muted-color;
 
-//
-// New
-//
-
-@subnav-font-size:                              round((@global-font-size * 0.92)); // 13px
-
 
 // Component
 // ========================================================================
 
-.hook-subnav() {
-    font-size: @subnav-font-size;
-    text-transform: uppercase;
-}
+.hook-subnav() {}
 
 .hook-subnav-hover() {}
 
@@ -51,10 +43,8 @@
 
 .hook-subnav-pill() { border-radius: @global-border-radius; }
 
-// Hover
 .hook-subnav-pill-hover() { box-shadow: 0 0 0 1px rgba(0,0,0,0.15); }
 
-// Active
 .hook-subnav-pill-active() { box-shadow: none; }
 
 
