--- a/themes/one/less/uikit/tab.less
+++ b/themes/one/less/uikit/tab.less
@@ -8,13 +8,13 @@
 // ========================================================================
 
 @tab-border:                                    @global-border;
-@tab-color:                                     @global-color;
+@tab-color:                                     @global-link-color;
 @tab-hover-border:                              rgba(0,0,0,0.06);
 @tab-hover-background:                          #f5f5f5;
-@tab-hover-color:                               @global-color;
+@tab-hover-color:                               @global-link-hover-color;
 @tab-active-border:                             @global-border;
 @tab-active-background:                         @global-background;
-@tab-active-color:                              @global-link-color;
+@tab-active-color:                              @global-color;
 @tab-disabled-color:                            @global-muted-color;
 
 
