--- a/themes/one/less/uikit/table.less
+++ b/themes/one/less/uikit/table.less
@@ -8,6 +8,8 @@
 // ========================================================================
 
 @table-margin-vertical:                         @global-margin;
+@table-padding-vertical:                        10px;
+@table-padding-horizontal:                      10px;
 
 @table-caption-color:                           @global-muted-color;
 @table-caption-font-size:                       round((@global-font-size * 0.85)); // 12px / 14px
@@ -16,14 +18,45 @@
 
 @table-hover-background:                        darken(@table-striped-background, 4%);
 
+//
+// New
+//
+
+@table-border:                                  @global-border;
+
 
 // Component
 // ========================================================================
 
 .hook-table() {}
 
+.hook-table-active() {}
+
+.hook-table-striped() {}
+
+.hook-table-condensed() {}
+
+.hook-table-hover() {}
+
 
 // Miscellaneous
 // ========================================================================
 
-.hook-table-misc() {}
+.hook-table-misc() {
+
+    .uk-table th {
+        border-bottom: 1px solid @table-border;
+        font-size: round((@global-font-size * 0.85)); // 12px / 14px
+        text-transform: uppercase;
+        font-weight: normal;
+    }
+
+    .uk-table :not(:first-child) > th { padding-top: @table-padding-vertical + @global-margin; }
+
+    .uk-table :not(:last-child) > td { border-bottom: 1px solid @table-border; }
+
+    .uk-table tfoot { border-top: 1px solid @table-border; }
+
+    .uk-table-condensed th { padding: @table-condensed-padding-vertical @table-condensed-padding-horizontal; }
+
+}
