--- a/themes/one/less/uikit/tooltip.less
+++ b/themes/one/less/uikit/tooltip.less
@@ -8,9 +8,9 @@
 // ========================================================================
 
 @tooltip-z-index:                               @global-z-index + 30;
+@tooltip-background:                            #f0f0f0;
 
-@tooltip-background:                            #333335;
-@tooltip-color:                                 #dbdbdc;
+@tooltip-color:                                 @global-color;
 @tooltip-font-size:                             round((@global-font-size * 0.85)); // 12px / 14px
 @tooltip-line-height:                           round((@tooltip-font-size * 1.46)); // 18px / 20px
 
